tests/snapshots/compile__wgsl_transform_rotate_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_rotate1_angle: f32,
    u_control_rotate1_centerX: f32,
    u_control_rotate1_centerY: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn rotate1_output(uv: vec2f) -> vec4f {
    let angleRad = (u.u_control_rotate1_angle) * 2.0 * PI;
    let center = vec2f(u.u_control_rotate1_centerX, u.u_control_rotate1_centerY);
    let s = sin(angleRad);
    let c = cos(angleRad);
    let rotatedUV = mat2x2f(c, -s, s, c) * (uv - center) + center;
    return defaultUvMap(rotatedUV);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return rotate1_output(uv);
}
