tests/snapshots/compile__wgsl_transform_shakycam_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_shakycam1_amplitude: f32,
    u_control_shakycam1_cosCoeff: f32,
    u_control_shakycam1_phaseOffset: f32,
    u_control_shakycam1_phaseOffsetY: f32,
    u_control_shakycam1_sinCoeff: f32,
    u_count_shakycam1_clock: vec2f,
    u_count_shakycam1_clockY: vec2f,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn shakycam1_output(uv: vec2f) -> vec4f {
    let tx = fract(time_periodic(u.u_count_shakycam1_clock, u.u_control_shakycam1_phaseOffset)) * 2.0 * PI;
    let ty = fract(time_periodic(u.u_count_shakycam1_clockY, u.u_control_shakycam1_phaseOffsetY)) * 2.0 * PI;
    let amplitude = u.u_control_shakycam1_amplitude;
    var xOffset = sin(tx * 10.0) * (u.u_control_shakycam1_sinCoeff) * amplitude;
    xOffset += cos(tx * 7.0) * (u.u_control_shakycam1_cosCoeff) * amplitude * 0.5;
    var yOffset = sin(ty * 2.0) * (u.u_control_shakycam1_sinCoeff) * amplitude;
    yOffset += cos(ty * 3.0) * (u.u_control_shakycam1_cosCoeff) * amplitude * 0.5;
    let shakenUV = uv + vec2f(xOffset, yOffset);
    return defaultUvMap(shakenUV);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return shakycam1_output(uv);
}
