tests/snapshots/compile__wgsl_transform_stretchskew_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_stretchskew1_skewX: f32,
    u_control_stretchskew1_skewY: f32,
    u_control_stretchskew1_stretchX: f32,
    u_control_stretchskew1_stretchY: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn stretchskew1_output(uv: vec2f) -> vec4f {
    let stretchedUV = vec2f(uv.x * (u.u_control_stretchskew1_stretchX), uv.y * (u.u_control_stretchskew1_stretchY));
    let skewedUV = vec2f(
        stretchedUV.x + stretchedUV.y * (u.u_control_stretchskew1_skewX),
        stretchedUV.y + stretchedUV.x * (u.u_control_stretchskew1_skewY));
    return defaultUvMap(skewedUV);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return stretchskew1_output(uv);
}
